--- a/package.json
+++ b/package.json
@@ -16,8 +16,12 @@
     "@angular/platform-browser-dynamic": "7.0.4",
     "@angular/router": "7.0.4",
     "angular-in-memory-web-api": "0.5.4",
+    "angularfire2": "^5.1.0",
+    "bootstrap": "^4.1.3",
     "core-js": "2.5.7",
+    "firebase": "^5.5.9",
     "hammerjs": "2.0.8",
+    "material-design-icons": "^3.0.1",
     "moment": "2.22.2",
     "rxjs": "6.3.3",
     "web-animations-js": "2.3.1",
