--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "core-js": "2.5.7",
     "firebase": "^5.5.9",
     "hammerjs": "2.0.8",
+    "intersection-observer": "^0.5.1",
     "material-design-icons": "^3.0.1",
     "moment": "2.22.2",
+    "ng-in-viewport": "^6.0.3",
     "rxjs": "6.3.3",
     "web-animations-js": "2.3.1",
     "zone.js": "0.8.26"
